new proj/src/objects/Case_Trending_Snapshot__c.object
<CustomObject>
    <description>An object used to associate a fields for Analytic snapshot (Case Management).</description>
    <fields>
        <fullName>Actual_Age__c</fullName>
        <label>Actual Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases Trending Snapshot</relationshipLabel>
        <relationshipName>Cases_Trending_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case_Trending_Snapshot</relationshipLabel>
        <relationshipName>Cases_Trending_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Age_Days__c</fullName>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Case_Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - M&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Power Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - CIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Gradilux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - LA BELO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - EV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - PwSensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - PwSwitching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Salem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - MS Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - iesensingsales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - gesensingorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - SensingFrance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - SensingDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - CSD Italia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email - SensingIberia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Case_amount__c</fullName>
        <label>Case amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases Trending Snapshot</relationshipLabel>
        <relationshipName>Cases_Trending_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Status__c</fullName>
        <label>ERP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reported/Not Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported/ Not Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported/Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported/ Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Sub_Status__c</fullName>
        <label>MCS Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Delivery date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending New Account Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Prepayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Modality__c</fullName>
        <label>Modality</label>
        <picklist>
            <picklistValues>
                <fullName>EDDY CURRENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING MACHINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULTRASONICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIGITIAL CONVERSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Ray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAS &amp; MOISTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMIDITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRESSURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROTIMETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELAIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEMPERATURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALIDATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rad Meas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Humidity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS MEMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Protimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Telaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN Hardware</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Owner_Role__c</fullName>
        <label>Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rig Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Order Confirmation received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response Telephone/Email/Fax request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response to RFQ request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Shipping notification received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit note required - GE Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit note required - Customer Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer - Discount/Commission issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice format does not match PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of credit document issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidated damages invoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone billing does not match contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user - Pricing issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Order - We can&quot;t deliver the order on the request date.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Order - We have repromised the delivery date too many times.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Leadtime is too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused Order - Customer will not place an order due to long lead time.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Quoted Leadtime is too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Turn-Around-Time is too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification - Missing or Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOA - Product Does not Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation - Product Documents missing or incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Operating Manual Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue - Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specification - Product does not meet Specification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TAT_Cause__c</fullName>
        <label>TAT Cause</label>
        <picklist>
            <picklistValues>
                <fullName>CC Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclean Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSC – Order Conf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WF Delays (e.g. Risk, Gov.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Explain)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Trending Snapshot</label>
    <nameField>
        <label>Case Trending Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases Trending Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>